crates/bevy_ecs/compile_fail/tests/ui/query_to_readonly.stderr
error[E0502]: cannot borrow `query` as immutable because it is also borrowed as mutable
  --> tests/ui/query_to_readonly.rs:LL:CC
   |
LL |     for _ in query.iter_mut() {
   |              ----------------
   |              |
   |              mutable borrow occurs here
   |              mutable borrow later used here
LL |         for _ in query.as_readonly().iter() {}
   |                  ^^^^^ immutable borrow occurs here

error[E0502]: cannot borrow `query` as mutable because it is also borrowed as immutable
  --> tests/ui/query_to_readonly.rs:LL:CC
   |
LL |     for _ in query.as_readonly().iter() {
   |              --------------------------
   |              |
   |              immutable borrow occurs here
   |              immutable borrow later used here
LL |         for _ in query.iter_mut() {}
   |                  ^^^^^^^^^^^^^^^^ mutable borrow occurs here

error[E0502]: cannot borrow `query` as immutable because it is also borrowed as mutable
  --> tests/ui/query_to_readonly.rs:LL:CC
   |
LL |         let mut mut_foo = query.single_mut();
   |                           ----- mutable borrow occurs here
...
LL |         let readonly_query = query.as_readonly();
   |                              ^^^^^ immutable borrow occurs here
...
LL |         *mut_foo = Foo;
   |          ------- mutable borrow later used here

error[E0502]: cannot borrow `query` as mutable because it is also borrowed as immutable
  --> tests/ui/query_to_readonly.rs:LL:CC
   |
LL |         let readonly_query = query.as_readonly();
   |                              ----- immutable borrow occurs here
...
LL |         let mut mut_foo = query.single_mut();
   |                           ^^^^^^^^^^^^^^^^^^ mutable borrow occurs here
...
LL |         println!("{ref_foo:?}");
   |                   ----------- immutable borrow later used here

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0502`.
